# gm-miner

./: .gitignore  .pre-commit-config.yaml  AZURE_VERIFY_NOTES.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  NOTICE  README.md  SECURITY.md  deny.toml  dist-workspace.toml  test_b64
.github/: dependabot.yml  zizmor.yml
.github/workflows/: ci.yml  image-build.yml  publish-image-version.yml  release.yml
attestd/: Cargo.toml
attestd/src/: identity.rs  info.rs  keypair.rs  lib.rs  main.rs  provider.rs  ratls.rs  report_data.rs
attestd/src/azure_verify/: arm.rs  checks.rs  config.rs  endpoint.rs  mod.rs  periodic.rs
attestd/src/azure_verify/checks/: streaming.rs
auth-sidecar/: Cargo.toml
auth-sidecar/src/: config.rs  lib.rs  main.rs  metrics.rs  provider.rs  refresh.rs  server.rs  state.rs  worker.rs
azure-verify/: Cargo.toml
azure-verify/src/: arm.rs  checks.rs  config.rs  endpoint.rs  error.rs  lib.rs  periodic.rs
azure-verify/src/checks/: streaming.rs
capability/: Cargo.toml
capability/src/: auth.rs  capability.rs  lib.rs  main.rs  metrics.rs  routes.rs
capability/tests/: capability_integration.rs
cli/: Cargo.toml
cli/src/: auth.rs  btcli.rs  client.rs  compose_hash.rs  config.rs  dependency.rs  deploy.rs  earnings.rs  gcp.rs  image.rs  image_version.rs  lib.rs  main.rs  nanodollar.rs  network.rs  node_secret.rs  oauth_subscription.rs  phala.rs  picodollar.rs  pricing.rs  register_hotkey.rs  slots.rs  terms.rs  tos.rs  types.rs  wizard.rs  workers.rs
cli/src/commands/: deploy.rs  doctor.rs  earnings.rs  fun.rs  hotkey.rs  keys.rs  mod.rs  persist.rs  pricing.rs  products.rs  streaming_check.rs  wizard.rs
cli/src/deploy/: compose.rs  cvm.rs  hashes.rs  mod.rs  registry_auth.rs  version.rs
cli/tests/: declare_product_test.rs  deploy_test.rs  diagnosis_test.rs  login_api_url_test.rs  nanodollar_test.rs  picodollar_test.rs  preflight_auth_test.rs  refresh_token_test.rs  register_image_test.rs  registry_visibility_test.rs  set_api_keys_test.rs  start_render_test.rs  worker_test.rs
docs/: .gitkeep  auth-modes.md  auto-publish-image-version.md  foundry-setup.md  handoff-w4.md  miner-terms.md  multi-key-slots.md  reproducibility.md
docs/research/: oauth-subscription-prior-art.md
dstack/: .gitkeep  app.json.template  deploy.sh  docker-compose.yaml  prelaunch.sh
image/: .gitkeep  Dockerfile  envoy.yaml  start.sh
