[workspace]
resolver = "2"
members = ["attestd", "cli"]

[workspace.package]
version = "0.1.1"
edition = "2021"
# 1.88 is the floor of the locked dependency tree: the dstack-sdk ->
# alloy chain (pulled in by the attestd crate) requires rustc 1.88+
# transitively (time, serde_with). The image builds with a newer
# toolchain still — see image/Dockerfile.
rust-version = "1.88"
license = "Apache-2.0"
publish = false
repository = "https://github.com/taostat/gm-miner"

[workspace.dependencies]
tokio = { version = "1.42", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4.5", features = ["derive", "env"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
axum = "0.8"
async-trait = "0.1"
base64 = "0.22"
ed25519-dalek = { version = "2.1", features = ["rand_core", "zeroize"] }
sha2 = "0.11"
hex = "0.4"
chrono = { version = "0.4", default-features = false, features = ["serde", "clock", "std"] }
dstack-sdk = "0.1"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
unwrap_used = "deny"
expect_used = "warn"
panic = "deny"
panic_in_result_fn = "deny"
unimplemented = "deny"
allow_attributes = "deny"
dbg_macro = "deny"
todo = "deny"
print_stdout = "deny"
print_stderr = "deny"
await_holding_lock = "deny"
large_futures = "deny"
exit = "deny"
mem_forget = "deny"
module_name_repetitions = "allow"
similar_names = "allow"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
