[package]
# The single source of truth for Azure owner-capture verification: `attestd`
# runs it as a fail-closed boot gate inside the CVM, and `gmcli doctor` runs the
# same code as a preflight on the operator's machine. One crate, so doctor can
# never promise a PASS that attestd then refuses to boot on.
name = "gm-azure-verify"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true
description = "Azure owner-capture verification shared by the gm miner's attestd boot gate and `gmcli doctor`."

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
unwrap_used = "deny"
expect_used = "warn"
panic = "deny"
panic_in_result_fn = "deny"
unimplemented = "deny"
allow_attributes = "deny"
dbg_macro = "deny"
todo = "deny"
print_stdout = "deny"
print_stderr = "deny"
await_holding_lock = "deny"
large_futures = "deny"
exit = "deny"
mem_forget = "deny"
module_name_repetitions = "allow"
similar_names = "allow"

[lib]
name = "gm_azure_verify"
path = "src/lib.rs"

[dependencies]
tokio = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
wiremock = "0.6"
