[package]
name = "gm-miner-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true
description = "Phase 0 scaffold for the gm miner CLI. Phase 1 W4 fills in the Taostats OAuth device-code flow, image registration, and product declaration commands."

[lints]
workspace = true

[[bin]]
name = "gm-miner"
path = "src/main.rs"

[dependencies]
clap = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
